vlib/v/checker/tests/js_with_non_js_backend_too_many_arguments.vv
fn JS.Foo.bar() bool

JS.Foo.bar(123)
